syntax = "proto3";
package protobuf;

message FindSuccessorRequest {
    string ID = 1;
    string host = 2;
}

message FindSuccessorResponse {
    string ID = 1;
    string host = 2;
}