syntax = "proto3";
package = "protobuf";

message ListNodesRequest {
    string serverName = 1;
}